updating our detail

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am studying towards being a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Mazatlan,Guerrero,Mexico</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking and playing video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>working as a programmer for a gaming company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chicago,IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because i find all of this 
+        really interresting and i want to start a career.</p>
     </section>
 
     <footer id="footer">
