--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <h1>Where do you live?</h1>
       <p>Chicago,IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to be a web developer because i find all of this 
-        really interresting and i want to start a career.</p>
+      <p>I want to be a web developer because I find all of this 
+        really interresting and I want to start a career.</p>
     </section>
 
     <footer id="footer">
